# PDF_Duplex_Combiner

./: .gitignore  README.md  gui.py  main.py  pdf_duplex_combiner.spec  pyproject.toml
tests/: test_main.py
