[project]
name = "pdf-duplex-combiner"
version = "0.1.0"
description = "Merge odd and even scanned pages into a single PDF"
readme = "README.md"
authors = [
    {name = "John SHEN", email = "johnshen200@outlook.com"},
]
requires-python = "^3.11"
dependencies = [
    "PyPDF2>=3.0",
]

[project.scripts]
pdf-duplex-combiner = "main:main"
pdf-duplex-combiner-gui = "gui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
reportlab = "^4.4.1"

